# metal-tests

./: .gitignore  CMakeLists.txt  README.md  ax_minus_b.cpp
benchmarks/: CMakeLists.txt  mat_add.cpp  mat_cdiv.cpp  mat_cmul.cpp  mat_mul.cpp  utils.hpp  vec_add.cpp  vec_cdiv.cpp  vec_cmul.cpp  vec_mul.cpp
benchmarks/algorithms/: benchmark_cg.cpp  benchmark_gd.cpp
benchmarks/matrix/: benchmark_add.cpp  benchmark_cdiv.cpp  benchmark_cmul.cpp  benchmark_mul.cpp  benchmark_sadd.cpp  benchmark_sdiv.cpp  benchmark_ssub.cpp  benchmark_sub.cpp
benchmarks/matrix_vector/: benchmark_mul.cpp
benchmarks/vector/: benchmark_add.cpp  benchmark_cdiv.cpp  benchmark_cmul.cpp  benchmark_mul.cpp  benchmark_sadd.cpp  benchmark_sdiv.cpp  benchmark_ssub.cpp  benchmark_sub.cpp
cmake/backends/: CPU.cmake  Eigen.cmake  Metal.cmake  SIMD.cmake  backend.cmake
include/: algorithms.hpp  buffer.hpp  device.hpp  device_types.hpp  tensor.hpp
src/backends/cpu/: cpu_device.cpp  cpu_device.hpp  device.cpp  tensor.cpp
src/backends/eigen/: eigen_device.cpp  eigen_device.hpp
src/backends/metal/: device.mm  metal_device.hpp  metal_device.mm  tensor.mm
src/backends/metal/shaders/: ax_minus_b.metal  mat_cdiv.metal  mat_cmul.metal  mat_mul.metal  mat_sadd.metal  mat_sdiv.metal  mat_ssub.metal  mat_vec_mul.metal  vec_add.metal
src/backends/serial/: serial_device.cpp  serial_device.hpp
src/backends/simd/: simd_device.cpp  simd_device.hpp
tests/: CMakeLists.txt  device_creation.cpp  mat_add.cpp  mat_cdiv.cpp  mat_cmul.cpp  mat_mul.cpp  matchers.hpp  vec_add.cpp  vec_cdiv.cpp  vec_cmul.cpp
tests/algorithms/: test_gd.cpp
tests/matrix/: test_add.cpp  test_cdiv.cpp  test_cmul.cpp  test_mul.cpp  test_sadd.cpp  test_sdiv.cpp  test_ssub.cpp  test_sub.cpp
tests/matrix_vector/: test_mul.cpp
tests/vector/: test_add.cpp  test_cdiv.cpp  test_cmul.cpp  test_mul.cpp  test_sadd.cpp  test_sdiv.cpp  test_ssub.cpp  test_sub.cpp
